--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -41,3 +41,33 @@ spec:
           initialDelaySeconds: 15
           timeoutSeconds: 1
           periodSeconds: 10
+        Resources:
+          requests:
+            cpu: 200m
+            
+ ---
+ 
+ apiversion: autoscaling/v2beta1
+ kind: HorizantalPodAutoscaler
+ metadata: 
+   name: train-schedule
+   namespace: default
+ spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: train-schedule-deployment
+ minReplicas: 1
+ maxReplicas: 6
+ metrics:
+ - type:  Resource
+    resource:
+    name: cpu
+    targetAvarageUtlisation:  50
+    
+ 
+    
+   
+            
+            
+         
